Secret key backup of S/MIME certificate creates bad result
Closed, ResolvedPublic

Assigned To
Authored By
• ikloecker
Sep 6 2022, 12:27 PM
Tags
  • Restricted Project
  • kleopatra
  • Restricted Project

Description

This is a spin-off of T6187: Kleopatra: Import of p12 file fails with "invalid crypto engine" which deals with problems when importing the broken export result.

Revisions and Commits

Event Timeline

• ikloecker created this task.

This is most likely a regression of switching to the gpgme-based secret key export.

• ikloecker changed the task status from Open to Testing.Sep 6 2022, 12:46 PM
• ikloecker removed • ikloecker as the assignee of this task.
• ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
• ikloecker added a project: Restricted Project.

Should be fixed.

• aheinecke claimed this task.

I can confirm the fix.

For the invalid export / import I have opened: T6190

• ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Apr 5 2023, 1:51 PM