Tell gpgsm to export the secret key as PKCS#12

GnuPG-bug-id: 6189